--- a/TnbParallel/TnbParallel.vcxproj
+++ b/TnbParallel/TnbParallel.vcxproj
@@ -70,7 +70,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)Commons\metis\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(MSMPI_INC);$(IncludePath)</IncludePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>$(MSMPI_INC);$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -78,8 +81,9 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)TnbLib\parallel\decompose\decompose;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\decompositionConstraint;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preserveBaffles;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preserveFaceZones;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preservePatches;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\refinementHistory;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\singleProcessorFaceSets;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionMethod;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\geomDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\hierarchGeomDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\manualDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\multiLevelDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\noDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\simpleGeomDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\structuredDecomp;$(ProjectDir)TnbLib\parallel\decompose\metisDecomp;$(ProjectDir)TnbLib\parallel\decompose\ptscotchDecomp;$(ProjectDir)TnbLib\parallel\decompose\scotchDecomp;$(ProjectDir)TnbLib\parallel\distributed\distributedTriSurfaceMesh;$(ProjectDir)TnbLib\parallel\reconstruct\reconstruct;$(SolutionDir)TnbContrib\include;$(SolutionDir)TnbFvMesh\include;$(SolutionDir)TnbFiniteVolume\include;$(SolutionDir)TnbBase\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)TnbLib\parallel\decompose\decompose;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\decompositionConstraint;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preserveBaffles;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preserveFaceZones;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preservePatches;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\refinementHistory;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\singleProcessorFaceSets;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionMethod;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\geomDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\hierarchGeomDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\manualDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\multiLevelDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\noDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\simpleGeomDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\structuredDecomp;$(ProjectDir)TnbLib\parallel\decompose\metisDecomp;$(ProjectDir)TnbLib\parallel\decompose\ptscotchDecomp;$(ProjectDir)TnbLib\parallel\decompose\scotchDecomp;$(ProjectDir)TnbLib\parallel\distributed\distributedTriSurfaceMesh;$(ProjectDir)TnbLib\parallel\reconstruct\reconstruct;$(SolutionDir)TnbLagrangian\include;$(SolutionDir)TnbDynamicMesh\include;$(SolutionDir)TnbFvMesh\include;$(SolutionDir)TnbFiniteVolume\include;$(SolutionDir)TnbBase\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <PreprocessorDefinitions>NoRepository;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -125,8 +129,9 @@ for /r "$(ProjectDir)tnbLib" %%f in (*.hxx) do @xcopy "%%f" "$(ProjectDir)includ
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)TnbLib\parallel\decompose\decompose;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\decompositionConstraint;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preserveBaffles;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preserveFaceZones;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preservePatches;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\refinementHistory;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\singleProcessorFaceSets;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionMethod;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\geomDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\hierarchGeomDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\manualDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\multiLevelDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\noDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\simpleGeomDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\structuredDecomp;$(ProjectDir)TnbLib\parallel\decompose\metisDecomp;$(ProjectDir)TnbLib\parallel\decompose\ptscotchDecomp;$(ProjectDir)TnbLib\parallel\decompose\scotchDecomp;$(ProjectDir)TnbLib\parallel\distributed\distributedTriSurfaceMesh;$(ProjectDir)TnbLib\parallel\reconstruct\reconstruct;$(SolutionDir)TnbContrib\include;$(SolutionDir)TnbFvMesh\include;$(SolutionDir)TnbFiniteVolume\include;$(SolutionDir)TnbBase\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)TnbLib\parallel\decompose\decompose;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\decompositionConstraint;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preserveBaffles;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preserveFaceZones;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preservePatches;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\refinementHistory;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\singleProcessorFaceSets;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\decompositionMethod;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\geomDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\hierarchGeomDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\manualDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\multiLevelDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\noDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\simpleGeomDecomp;$(ProjectDir)TnbLib\parallel\decompose\decompositionMethods\structuredDecomp;$(ProjectDir)TnbLib\parallel\decompose\metisDecomp;$(ProjectDir)TnbLib\parallel\decompose\ptscotchDecomp;$(ProjectDir)TnbLib\parallel\decompose\scotchDecomp;$(ProjectDir)TnbLib\parallel\distributed\distributedTriSurfaceMesh;$(ProjectDir)TnbLib\parallel\reconstruct\reconstruct;$(SolutionDir)TnbLagrangian\include;$(SolutionDir)TnbDynamicMesh\include;$(SolutionDir)TnbFvMesh\include;$(SolutionDir)TnbFiniteVolume\include;$(SolutionDir)TnbBase\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <PreprocessorDefinitions>NoRepository;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -137,6 +142,7 @@ for /r "$(ProjectDir)tnbLib" %%f in (*.hxx) do @xcopy "%%f" "$(ProjectDir)includ
   <ItemGroup>
     <ClInclude Include="TnbLib\parallel\decompose\decompose\decompositionModel.hxx" />
     <ClInclude Include="TnbLib\parallel\decompose\decompose\fvFieldDecomposer.hxx" />
+    <ClInclude Include="TnbLib\parallel\decompose\decompose\fvFieldDecomposerDecomposeFieldsI.hxx" />
     <ClInclude Include="TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\decompositionConstraint\decompositionConstraint.hxx" />
     <ClInclude Include="TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preserveBaffles\preserveBafflesConstraint.hxx" />
     <ClInclude Include="TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preserveFaceZones\preserveFaceZonesConstraint.hxx" />
@@ -155,15 +161,18 @@ for /r "$(ProjectDir)tnbLib" %%f in (*.hxx) do @xcopy "%%f" "$(ProjectDir)includ
     <ClInclude Include="TnbLib\parallel\decompose\ptscotchDecomp\ptscotchDecomp.hxx" />
     <ClInclude Include="TnbLib\parallel\decompose\scotchDecomp\scotchDecomp.hxx" />
     <ClInclude Include="TnbLib\parallel\distributed\distributedTriSurfaceMesh\distributedTriSurfaceMesh.hxx" />
+    <ClInclude Include="TnbLib\parallel\distributed\distributedTriSurfaceMesh\distributedTriSurfaceMeshI.hxx" />
     <ClInclude Include="TnbLib\parallel\reconstruct\reconstruct\fvFieldReconstructor.hxx" />
+    <ClInclude Include="TnbLib\parallel\reconstruct\reconstruct\fvFieldReconstructorReconstructFieldsI.hxx" />
     <ClInclude Include="TnbLib\parallel\reconstruct\reconstruct\pointFieldReconstructor.hxx" />
+    <ClInclude Include="TnbLib\parallel\reconstruct\reconstruct\pointFieldReconstructorReconstructFieldsI.hxx" />
     <ClInclude Include="TnbLib\parallel\reconstruct\reconstruct\processorMeshes.hxx" />
     <ClInclude Include="TnbLib\parallel\reconstruct\reconstruct\reconstructLagrangian.hxx" />
+    <ClInclude Include="TnbLib\parallel\reconstruct\reconstruct\reconstructLagrangianFieldsI.hxx" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TnbLib\parallel\decompose\decompose\decompositionModel.cxx" />
     <ClCompile Include="TnbLib\parallel\decompose\decompose\fvFieldDecomposer.cxx" />
-    <ClCompile Include="TnbLib\parallel\decompose\decompose\fvFieldDecomposerDecomposeFields.cxx" />
     <ClCompile Include="TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\decompositionConstraint\decompositionConstraint.cxx" />
     <ClCompile Include="TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preserveBaffles\preserveBafflesConstraint.cxx" />
     <ClCompile Include="TnbLib\parallel\decompose\decompositionMethods\decompositionConstraints\preserveFaceZones\preserveFaceZonesConstraint.cxx" />
@@ -182,14 +191,13 @@ for /r "$(ProjectDir)tnbLib" %%f in (*.hxx) do @xcopy "%%f" "$(ProjectDir)includ
     <ClCompile Include="TnbLib\parallel\decompose\ptscotchDecomp\ptscotchDecomp.cxx" />
     <ClCompile Include="TnbLib\parallel\decompose\scotchDecomp\scotchDecomp.cxx" />
     <ClCompile Include="TnbLib\parallel\distributed\distributedTriSurfaceMesh\distributedTriSurfaceMesh.cxx" />
-    <ClCompile Include="TnbLib\parallel\distributed\distributedTriSurfaceMesh\distributedTriSurfaceMeshTemplates.cxx" />
     <ClCompile Include="TnbLib\parallel\reconstruct\reconstruct\fvFieldReconstructor.cxx" />
-    <ClCompile Include="TnbLib\parallel\reconstruct\reconstruct\fvFieldReconstructorReconstructFields.cxx" />
     <ClCompile Include="TnbLib\parallel\reconstruct\reconstruct\pointFieldReconstructor.cxx" />
-    <ClCompile Include="TnbLib\parallel\reconstruct\reconstruct\pointFieldReconstructorReconstructFields.cxx" />
     <ClCompile Include="TnbLib\parallel\reconstruct\reconstruct\processorMeshes.cxx" />
-    <ClCompile Include="TnbLib\parallel\reconstruct\reconstruct\reconstructLagrangianFields.cxx" />
     <ClCompile Include="TnbLib\parallel\reconstruct\reconstruct\reconstructLagrangianPositions.cxx" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
